applications/scratch-5896330/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: scratch-5896330
  namespace: scratch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: scratch-5896330

  template:
    metadata:
      labels:
        app: scratch-5896330

    spec:
      containers:
      - name: scratch-5896330
        image: scratch:latest

        ports:
        - containerPort: 80
