applications/scratch-5896330/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: scratch-5896330
  namespace: scratch

spec:
  selector:
    app: scratch-5896330

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
