applications/scratch-5896330/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: scratch-5896330
  namespace: scratch

spec:
  ingressClassName: traefik

  rules:
  - host: scratch-5896330.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: scratch-5896330

            port:
              number: 80
